# Complier

./: .gitignore  ReadMe.md
assets/: CFG.txt  RG.txt  Tokens.txt  Trans.txt  code.txt
src/: CMakeLists.txt  main.cpp
src/Lex/: CMakeLists.txt  DFA.cpp  DFA.h  Lexer.cpp  Lexer.h  NFA.cpp  NFA.h  Token.cpp  Token.h
src/Opt/: CMakeLists.txt  optimize.cpp  optimize.h
src/SSA/: AST.cpp  AST.h  CMakeLists.txt  Parser.cpp  Parser.h  Praser.cpp  Praser.h  Production.cpp  Production.h  SDD.cpp  SDD.h  SSA_main.cpp  Semer.cpp  Semer.h  config.h
src/VM/: CMakeLists.txt  Machine.cpp  Machine.h
